--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=root123
+DB_USER=if0_39051034
+DB_PASSWORD=6ATBPTh5WtVwv
 DB_NAME=test
 JWT_SECRET_KEY=your_secret_key
 PORT=5000
