--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-DB_HOST=localhost
+DB_HOST=sql105.infinityfree.com
 DB_USER=if0_39051034
 DB_PASSWORD=6ATBPTh5WtVwv
-DB_NAME=test
+DB_NAME=if0_39051034_test
 JWT_SECRET_KEY=your_secret_key
 PORT=5000
 REACT_APP_API_URL=http://localhost:5000
