--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-DB_HOST=sql105.infinityfree.com
-DB_USER=if0_39051034
-DB_PASSWORD=6ATBPTh5WtVwv
-DB_NAME=if0_39051034_test
+DB_HOST=mysql-wendemk13.alwaysdata.net
+DB_USER=wendemk13
+DB_PASSWORD=5#5MwxGxHCnKA6g
+DB_NAME=wendemk13_test
 JWT_SECRET_KEY=your_secret_key
 PORT=5000
 REACT_APP_API_URL=http://localhost:5000
