--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DB_HOST=mysql-wendemk13.alwaysdata.net
+DB_HOST=ssh-wendemk13.alwaysdata.net
 DB_USER=wendemk13@gmail.com
 DB_PASSWORD=5#5MwxGxHCnKA6g
 DB_NAME=wendemk13_test
