--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DB_HOST=mysql-wendemk13.alwaysdata.net
-DB_USER=wendemk13_test
+DB_USER=wendemk13
 DB_PASSWORD=5#5MwxGxHCnKA6g
 DB_NAME=wendemk13_test
 JWT_SECRET_KEY=your_secret_key
