--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_HOST=mysql-wendemk13.alwaysdata.net
 DB_USER=wendemk13
-DB_PASSWORD=5#5MwxGxHCnKA6g
+DB_PASSWORD=qweas123
 DB_NAME=wendemk13_test
 JWT_SECRET_KEY=your_secret_key
 PORT=5000
